--- a/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainWindow.xaml
+++ b/SRC/NvidiaMaxine/VFXSamples/MainDemo/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MainDemo"
         mc:Ignorable="d"
-        Title="Nvidia Maxine Video Effects SDK Demo" Height="423" Width="813" Background="#1f1f1f">
+        Title="Nvidia Maxine Video Effects SDK Demo" Height="423" Width="813" Background="#1f1f1f" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="110"/>
@@ -23,12 +23,12 @@
             <Label Foreground="White" Margin="10,5,0,10" FontWeight="Bold"  HorizontalAlignment="Center" VerticalAlignment="Top">SOURCE</Label>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,40,0,0" >
-                <RadioButton x:Name="rbWebcam" Width="75" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White">Webcam</RadioButton>
-                <ComboBox x:Name="cbWebcam" Width="274" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center">LALALA</ComboBox>
+                <RadioButton x:Name="rbCamera" Width="75" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" GroupName="SOURCE">Webcam</RadioButton>
+                <ComboBox x:Name="cbCamera" Width="274" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center"></ComboBox>
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,70,0,0">
-                <RadioButton x:Name="rbFile" Width="75" IsChecked="True" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White">File</RadioButton>
+                <RadioButton x:Name="rbFile" Width="75" IsChecked="True" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="White" GroupName="SOURCE">File</RadioButton>
                 <TextBox x:Name="edSourceFilename" Width="250" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center">c:\VF\x\!video.avi</TextBox>
                 <Button x:Name="btSelectSourceFile" Width="24" Height="24">...</Button>
             </StackPanel>
@@ -71,7 +71,7 @@
                 <Button x:Name="btStart" Click="btStart_Click" Width="50" Height="24" Margin="5,0,0,0">Start</Button>
                 <Button x:Name="btStop" Click="btStop_Click" Width="50" Height="24" Margin="5,0,0,0">Stop</Button>
                 <ProgressBar x:Name="pbProgress" Width="200" Height="24" Margin="5,0,0,0"></ProgressBar>
-                <CheckBox x:Name="cbPreview" VerticalAlignment="Center" Margin="5,0,0,0" Foreground="White">Preview</CheckBox>
+                <CheckBox x:Name="cbPreview" VerticalAlignment="Center" Margin="5,0,0,0" Foreground="White" IsChecked="True">Preview</CheckBox>
             </StackPanel>
         </Grid>
     </Grid>
