Dereverb+Denoiser added

--- a/AudioEffectsSamples/MainDemo/MainWindow.xaml
+++ b/AudioEffectsSamples/MainDemo/MainWindow.xaml
@@ -35,6 +35,7 @@
                 <ComboBox x:Name="cbEffect" Grid.Column="0" Margin="10,10,0,0" Height="24" Width="225" HorizontalAlignment="Left" VerticalAlignment="Top" SelectedIndex="0">
                     <ComboBoxItem>Denoiser</ComboBoxItem>
                     <ComboBoxItem>Dereverb</ComboBoxItem>
+                    <ComboBoxItem>Dereverb+Denoiser</ComboBoxItem>
                 </ComboBox>
             </Grid>
         </GroupBox>
